--- a/index.html
+++ b/index.html
@@ -7,76 +7,78 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kyle Kilby</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
 </head>
 
 <body>
   <header>
     <h1>Kyle Kilby</h1>
-    <h3>
-      <p>(720) 453.6744</p>
-      <p><a href="mailto:kyle.lee.kilby">Email me</a></p>
-    </h3>
+    <h5>Denver, CO</h5>
+    <h5>(720) 453.6744 </h5>
+    <button type="button" class="btn btn-link btn-lg"><a href="mailto:kyle.lee.kilby">Email me</a></button>
+    <a href="https://www.instagram.com/kyllionaire/"><i class="fa-brands fa-instagram fa-lg"></i></a>
   </header>
 
   <div class="main">
     <div id="objective">
       <h3>Objective</h3>
-      <p>To obtain a challenging, professional position to where I can grow my
-        experiences and expertise, as well as gain knowledge in a professional
+      <p class="lead">To obtain a challenging, professional position to where I can grow my <br>
+        experiences and expertise, as well as gain knowledge in a professional <br>
         atmosphere. I am self-motivated and team orientated.</p>
     </div>
 
-    <div class="work">
+    <div class="work lead">
+      <div class="experience">
+        <h2 class="mb-4">Experience</h2>
+      </div>
 
-      <h3>Experience</h3>
+      <h4>CO Department Of Transportation, Vail, CO</h4>
+      <h5>Heavy Equipment Operator</h5>
+      <h6>November 2021 - April 2022 | December 2018 - April 2019</h6>
+
+      <ul class="list-unstyled">
+        <li>Snow removal on I-70 Golden to Eisenhower tunnel and Vail Pass</li>
+        <li>Emergency response and traffic control operations</li>
+        <li>Assisted repairs for any and all road maintenance issues</li>
+
+      </ul>
+
+      <h4>West Direct Oil, Denver, CO</h4>
+      <h5>Fuel Transport Driver</h5>
+      <h6>December 2016 - June 2017</h6>
+
+      <ul class="list-unstyled">
+        <li>Performed loading and unloading of petroleum products to our customers in a safe and timely manner.</li>
+        <li>Executed gravity drops as well as using a PTO pump to transfer fuel into above ground tanks and equipment.
+        </li>
+        <li>Maintained thorough pre/post-trip logs</li>
+
+      </ul>
+
+      <h4>United States Marine Corps</h4>
+      <h5>Field Artillery Cannoneer</h5>
+      <h6>January 2007 - January 2014</h6>
+
+      <ul class="list-unstyled">
+        <li>Completed a variety of training, including but not limited to, Recruit Training, Marine Combat Training,
+          <br>
+          Artillery Operations Training and Towed Artillery Repair Training.
+        </li>
+        <li>Participated in Operation Iraqi Freedom </li>
+      </ul>
+
     </div>
-    <h4>CO Department Of Transportation, Vail, CO</h4>
-    <h5>Heavy Equipment Operator</h5>
-    <h6>November 2021 - April 2022 | December 2018 - April 2019</h6>
+    <div class="education">
 
-    <ul>
-      <li>Snow removal on I-70 Golden to Eisenhower tunnel and Vail Pass</li>
-      <li>Emergency response and traffic control operations</li>
-      <li>Assisted repairs for any and all road maintenance issues</li>
+      <h2>Education</h2>
 
-    </ul>
-
+      <ul class="list-unstyled">
+        <li>St. Ambrose University, Davenport, IA — Mechanical Engineering</li>
+        <li>Black Hawk College, Moline, IL —Associate of Science 2011 - 2013</li>
+      </ul>
+    </div>
   </div>
-
-  </div>
-  <h4>West Direct Oil, Denver, CO</h4>
-  <h5>Fuel Transport Driver</h5>
-  <h6>December 2016 - June 2017</h6>
-
-  <ul>
-    <li>Performed loading and unloading of petroleum products to our customers in a safe and timely manner.</li>
-    <li>Executed gravity drops as well as using a PTO pump to transfer fuel into above ground tanks and equipment.</li>
-    <li>Maintained thorough pre/post-trip logs</li>
-
-  </ul>
-
-  </div>
-  </div>
-
-  <h4>United States Marine Corps</h4>
-  <h5>Field Artillery Cannoneer</h5>
-  <h6>January 2007 - January 2014</h6>
-
-  <ul>
-    <li>Completed a variety of training, including but not limited to, Recruit Training, Marine Combat Training, <br>
-      Artillery Operations Training and Towed Artillery Repair Training.</li>
-    <li>Participated in Operation Iraqi Freedom </li>
-  </ul>
-
-  </div>
-  <div class="education">
-
-    <h3>Education</h3>
-  </div>
-  <ul>
-    <li>St. Ambrose University, Davenport, IA — Mechanical Engineering</li>
-    <li>Black Hawk College, Moline, IL —Associate of Science 2011 - 2013</li>
-  </ul>
   <!-- SKILLS
 Interpersonal
 •Deals effectively with a wide variety of people •Handles conflict successfully
@@ -89,6 +91,7 @@ accurately
 Adaptability and Flexibility
 •Able to pinpoint problems and initiate creative solutions
 •Creative problem solver -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
